--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 Flask==3.0.3
 gunicorn==23.0.0
-psycopg[binary]==3.2.3
+psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 redis==6.1.1
 requests==2.32.4
 titlecase==2.4.1
+
 
